--- a/Mapping_Single_Points/index.html
+++ b/Mapping_Single_Points/index.html
@@ -10,7 +10,7 @@
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
     <!-- Our CSS -->
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="static/style.css">
 </head>
 <body>
     <!--This is the div that hold the map-->
